update feature-policy header
Updates the Feature-Policy header to a Permissions-Policy header.

Also, add hidden username fields to some forms to suppress console warnings.

--- a/client/webserver/site/src/html/init.tmpl
+++ b/client/webserver/site/src/html/init.tmpl
@@ -9,6 +9,7 @@
         <span class="ico-locked fs20 grey me-2"></span>
         <span>[[[Set App Password]]]</span>
       </header>
+      <input type="text" name="username" autocomplete="username" class="d-hide"> <!-- to suppress console warning -->
       <div class="fs18">[[[reg_set_app_pw_msg]]]</div>
       <div class="mt-3 border-top">
         <label for="appPW">[[[Password]]]</label>
