update feature-policy header (#3193)
Updates the Feature-Policy header to a Permissions-Policy header.

Also, add hidden username fields to some forms to suppress console warnings.

--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -818,6 +818,7 @@
       <div id="exportDisclaimer">
         [[[export_wallet_disclaimer]]]
       </div>
+      <input type="text" name="username" autocomplete="username" class="d-hide"> <!-- to suppress console warning -->
       <div class="text-start">
         <label for="exportWalletPW">[[[Password]]]</label>
         <input type="password" id="exportWalletPW" autocomplete="current-password">
