--- a/client/webserver/site/src/css/wallets.scss
+++ b/client/webserver/site/src/css/wallets.scss
@@ -112,7 +112,7 @@
     border-left: none;
   }
 
-  #earlierTxs, #txViewBlockExplorer {
+  #txViewBlockExplorer {
     text-decoration: underline;
     cursor: pointer;
   }
