multi: check for used addresses (#2690)
* check for used addresses

* fix docstring and check for wallet trait on tx

* add dcr recipient and mempool txs

--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -135,6 +135,9 @@
 <div id="unifiedReceivers" class="d-flex align-items-stretch">
   <div id="unifiedReceiverTmpl" class="p-1 me-2 hoverbg lh1 fs15 pointer brdr selectable"></div>
 </div>
+<div id="addrUsed" class="my-1 text-center fs15 grey lh1 text-warning">
+  [[[address has been used]]]
+</div>
 <div id="newDepAddrBttnBox" class="flex-stretch-column">
   <button id="newDepAddrBttn" type="button" class="feature">[[[New Address]]]</button>
 </div>
