mm: Add live config and balance updates for running bots
This change introduces live balance and configuration updates
for active bots, along with UI improvements. Starting bots and bot
balance allocation now occurs on the 'mmsettings' page (instead of
the main 'mm' page). Two allocation options are now available:

- Quick config: Set buffers based on the number of lots to match on
  the same side before funds run low. Also possible to set a slippage
  buffer for the quote asset and fee reserves for EVM assets.
- Manual config: Specify exact asset amounts to allocate to the bot.

--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -1053,6 +1053,7 @@
     </div>
     <div class="d-flex align-items-stretch ps-3 border-start">
       <button data-tmpl="runLogsBttn" class="ico-textfile"></button>
+      <button data-tmpl="settingsBttn" class="ico-settings ms-1"></button>
       <button data-tmpl="stopBttn" class="ms-3 position-relative">Stop</button>
     </div>
   </div>
