redirect users to bison wallet website
Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -15,9 +15,9 @@
   {{if and (ne .Version .LatestVersion) .LatestVersion}}
     <div class="p-2 d-flex justify-content-center">
         <span class="fs15 green">[[[New Release Message]]]</span>
-        <a href="https://github.com/decred/dcrdex/releases/latest" target="_blank" rel="noopener noreferrer"
+        <a href="https://bisonwallet.org/#download" target="_blank" rel="noopener noreferrer"
           class="fs15 ps-2">
-          [[[View Release]]]
+          [[[View Website]]]
         </a>
     </div>
   {{end}}
