--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -12,7 +12,7 @@
   <link href="/css/style.css?v={{commitHash true}}" rel="stylesheet">
 </head>
 <body class="dark{{if .UseDEXBranding}} dex-branding{{end}}">
-  {{if and (ne .Version .LatestVersion) .LatestVersion}}
+  {{if .NewAppVersionAvailable}}
     <div class="p-2 d-flex justify-content-center">
         <span class="fs15 green">[[[New Release Message]]]</span>
         <a href="https://bisonwallet.org/#download" target="_blank" rel="noopener noreferrer"
