multi: show upgrade banner if newer version is available on GitHub (#3286)
* multi: show upgrade banner if newer version is available on GitHub

Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

* review changes

Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

* redirect users to bison wallet website

Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

* review changes

Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

* review: Compare semver components individually for upgrades

Modified version comparison logic to check major, minor, and patch
numbers separately in a single if statement for clarity and efficiency.
Ensures accurate upgrade decisions based on semantic versioning rules.

Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

* minor: remove duplicate test function

Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

* fix typo

Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

* fix typo

Co-authored-by: JoeGruffins <34998433+JoeGruffins@users.noreply.github.com>
Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

---------

Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>
Co-authored-by: JoeGruffins <34998433+JoeGruffins@users.noreply.github.com>

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -11,7 +11,16 @@
   <title>{{.Title}}</title>
   <link href="/css/style.css?v={{commitHash true}}" rel="stylesheet">
 </head>
-<body {{if .UseDEXBranding}}class="dex-branding"{{end}}>
+<body class="dark{{if .UseDEXBranding}} dex-branding{{end}}">
+  {{if .NewAppVersionAvailable}}
+    <div class="p-2 d-flex justify-content-center">
+        <span class="fs15 green">[[[New Release Message]]]</span>
+        <a href="https://bisonwallet.org/#download" target="_blank" rel="noopener noreferrer"
+          class="fs15 ps-2">
+          [[[View Website]]]
+        </a>
+    </div>
+  {{end}}
   <div class="popup-notes d-hide" id="popupNotes">
     <span data-tmpl="note" class="fs15">
       <div class="note-indicator d-inline-block" data-tmpl="indicator"></div>
