mm: Multi-hop arb improvements
client/mm - Updated multi-hop arb strategy: first leg uses Limit IOC order to
prevent market movement before second leg execution. Second leg is configurable as
Limit GTC or Market order. Updated `MultiHopConfig` with a boolean for second leg
market order and a limit order buffer for less favorable rates to increase fill
likelihood and minimize leftover funds in intermediate asset. Arbitrage rates are
now updated in memory post-epoch to reflect market changes, ensuring more up to
date arb rates for multi-hop arb to prevent unfilled orders.

client/mm/libxc - Updated CEX interface to require `quoteQty` for market buys,
previously assumed `qty` was in quote units. Now, `quoteQty` is mandatory for
market buys and optional for limit buys, allowing for optimized fund usage
in multi-hop arb second leg. Also added Limit IOC orders as a new order type.

ui - Updated `mmsettings` page to include new `MultiHopConfig` options.

--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -1140,6 +1140,7 @@
           <th class="border text-center">[[[Ordered Lots]]]</th>
           <th class="border text-center">[[[Rate]]]</th>
           <th class="border text-center" id="counterTradeRateHeader">[[[Arb Rate]]]</th>
+          <th class="border text-center" id="multiHopRatesHeader">Multi-hop Rates</th>
           <th class="border text-center">[[[Required DEX]]]</th>
           <th class="border text-center">[[[Used DEX]]]</th>
           <th class="border text-center" id="requiredCEXHeader">[[[Required CEX]]]</th>
@@ -1155,6 +1156,17 @@
           <td data-tmpl="orderedLots" class="text-center border"></td>
           <td data-tmpl="rate" class="text-center border"></td>
           <td data-tmpl="counterTradeRate" class="text-center border"></td>
+          <td data-tmpl="multiHopRates" class="text-center border">
+            <div>
+              <span class="me-1"><small>Aggregate:</small></span><span data-tmpl="aggRate"></span>
+            </div>
+            <div>
+              <span class="me-1"><small>Leg 1:</small></span><span data-tmpl="leg1Rate"></span>
+            </div>
+            <div>
+              <span class="me-1"><small>Leg 2:</small></span><span data-tmpl="leg2Rate"></span>
+            </div>
+          </td>
           <td data-tmpl="requiredDEX" class="text-center border">
             <span id="placementAmtRowTmpl" class="d-flex justify-content-end">
               <span data-tmpl="amt"></span>
