--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -680,6 +680,30 @@
             <span class="fs14 grey ms-1">epochs</span>
           </div>
         </div>
+
+        {{- /* MULTI-HOP COMPLETION */ -}}
+        <div id="multiHopCompletionBox" class="flex-stretch-column mt-2 pt-2 border-top">
+          <div class="fs16 mb-2 d-flex align-items-center justify-content-between">
+            <span>[[[multi_hop_completion_order]]]</span>
+            <span class="ico-info fs12" data-tooltip="[[[mh_completion_tooltip]]]"></span>
+          </div>
+          <div class="d-flex flex-column">
+            <div class="d-flex align-items-center mb-1">
+              <input type="radio" id="multiHopLimitOrder" name="multiHopOrderType" class="form-check-input me-2 mt-0">
+              <label for="multiHopLimitOrder" class="fs15 mb-0 me-3">[[[Limit Order]]]</label>
+              <input type="radio" id="multiHopMarketOrder" name="multiHopOrderType" class="form-check-input me-2 mt-0">
+              <label for="multiHopMarketOrder" class="fs15 mb-0">[[[Market Order]]]</label>
+            </div>
+            <div id="limitOrderBufferSection" class="d-flex align-items-center mt-2" style="display: none;">
+              <span class="fs15 me-2">[[[limit_order_buffer]]]</span>
+              <div id="limitOrderBufferSlider" class="mini-slider flex-grow-1 me-2"></div>
+              <input type="number" id="limitOrderBufferInput" class="micro thin text-end">
+              <span class="fs14 grey ms-1">%</span>
+              <span class="ico-info fs12 ms-2" data-tooltip="[[[limit_order_buffer_tooltip]]]"></span>
+            </div>
+          </div>
+        </div>
+
       </section>
 
       {{- /* AUTO REBALANCE */ -}}
