multi: Use bridging in market making

--- a/client/webserver/site/src/css/mm.scss
+++ b/client/webserver/site/src/css/mm.scss
@@ -179,4 +179,21 @@ div[data-handler=mm] {
     text-align: center;
     font-size: 15px;
   }
+
+  .buffer-input,
+  .transfer-input {
+    width: 30%;
+  }
+
+  .bridge-label {
+    min-width: 120px;
+  }
+
+  .bridge-select {
+    max-width: 200px;
+  }
+
+  #limitOrderBufferSection {
+    display: none;
+  }
 }
