--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -59,14 +59,14 @@
           <span id="onIndicator" class="on-indicator on me-2"></span> [[[bot_running]]]
         </div>
         
-        <div id="bridgeAssetBox" class="d-hide border-top">
+        <div id="intermediateAssetBox" class="d-hide border-top">
           <div class="d-flex align-items-center">
             <div class="flex-grow-1 pe-3">
               <div class="fs18 mb-1">This exact market does not exist on the exchange</div>
-              <div class="fs16 grey">A multi-hop arbitrage can be done using one of these bridge assets:</div>
+              <div class="fs16 grey">A multi-hop arbitrage can be done using one of these intermediate assets:</div>
             </div>
             <div>
-              <select id="bridgeAssetSelect" class="form-select fs18 w-auto">
+              <select id="intermediateAssetSelect" class="form-select fs18 w-auto">
               </select>
             </div>
           </div>
@@ -401,38 +401,16 @@
           <div id="minAllocationTable">
             <table>
               <thead>
-                <tr>
+                <tr id="minAllocationTableHeader">
                   <th></th>
-                  <th class="text-center">
-                    <img data-base-logo class="mini-icon">
-                    <span data-base-ticker></span>
-                  </th>
-                  <th class="text-center">
-                    <img data-quote-logo class="mini-icon">
-                    <span data-quote-ticker></span>
-                  </th>
-                  <th data-tmpl="baseFeeHeader" class="text-center">
-                    <img data-base-fee-logo class="mini-icon">
-                    <span data-base-fee-ticker></span>
-                  </th>
-                  <th data-tmpl="quoteFeeHeader" class="text-center">
-                    <img data-quote-fee-logo class="mini-icon">
-                    <span data-quote-fee-ticker></span>
-                  </th>
                 </tr>
               </thead>
               <tbody>
-                <tr>
+                <tr id="minAllocationTableDexRow">
                   <td><img class="logo-square mini-icon"></td>
-                  <td data-tmpl="dexBaseAlloc" class="text-center border"></td>
-                  <td data-tmpl="dexQuoteAlloc" class="text-center border"></td>
-                  <td data-tmpl="dexBaseFeeAlloc" class="text-center border"></td>
-                  <td data-tmpl="dexQuoteFeeAlloc" class="text-center border"></td>
                 </tr>
-                <tr data-tmpl="cexRow">
+                <tr id="minAllocationTableCexRow">
                   <td><img data-cex-logo class="mini-icon"></td>
-                  <td data-tmpl="cexBaseAlloc" class="text-center border"></td>
-                  <td data-tmpl="cexQuoteAlloc" class="text-center border"></td>
                 </tr>
               </tbody>
             </table>
@@ -449,7 +427,7 @@
             </div>
             <div class="ms-2 d-flex flex-column align-items-stretch w-100">
               <div>
-                <input id="buyBuffer" type="number" class="fs14 text-center p-2" style="width: 30%" step="1">
+                <input id="buyBuffer" type="number" class="fs14 text-center p-2 buffer-input" step="1">
               </div>
               <div id="buyBufferSlider" class="mini-slider mt-2 me-3"></div>
             </div>
@@ -466,7 +444,7 @@
             </div>
             <div class="ms-2 d-flex flex-column align-items-stretch w-100">
               <div>
-                <input id="sellBuffer" type="number" class="fs14 text-center p-2" style="width: 30%" step="1">
+                <input id="sellBuffer" type="number" class="fs14 text-center p-2 buffer-input" step="1">
               </div>
               <div id="sellBufferSlider" class="mini-slider mt-2 me-3"></div>
             </div>
@@ -479,7 +457,7 @@
             </div>
             <div class="ms-2 d-flex flex-column align-items-stretch w-100">
               <div class="d-flex align-items-center">
-                <input id="slippageBuffer" type="number" class="fs14 text-center p-2" style="width: 30%" step="0.001">
+                <input id="slippageBuffer" type="number" class="fs14 text-center p-2 buffer-input" step="0.001">
                 <span class="fs14 ms-1">%</span>
               </div>
               <div id="slippageBufferSlider" class="mini-slider mt-2 me-3"></div>
@@ -493,7 +471,7 @@
             </div>
             <div class="ms-2 d-flex flex-column align-items-stretch w-100">
               <div>
-                <input id="buyFeeReserve" type="number" class="fs14 text-center p-2" style="width: 30%" step="1">
+                <input id="buyFeeReserve" type="number" class="fs14 text-center p-2 buffer-input" step="1">
               </div>
               <div id="buyFeeReserveSlider" class="mini-slider mt-2 me-3"></div>
             </div>
@@ -506,9 +484,22 @@
             </div>
             <div class="ms-2 d-flex flex-column align-items-stretch w-100">
               <div>
-                <input id="sellFeeReserve" type="number" class="fs14 text-center p-2" style="width: 30%" step="1">
+                <input id="sellFeeReserve" type="number" class="fs14 text-center p-2 buffer-input" step="1">
               </div>
               <div id="sellFeeReserveSlider" class="mini-slider mt-2 me-3"></div>
+            </div>
+          </div>
+
+          <div id="bridgeFeeReserveSection" class="d-flex flex-column align-items-start pt-2 mt-2 border-top">
+            <div class="fs17 pb-1">
+              Bridge Fee Reserve
+              <span class="ico-info fs13 ms-1" data-tooltip="Additional funds to reserve for bridge transaction fees"></span>
+            </div>
+            <div class="ms-2 d-flex flex-column align-items-stretch w-100">
+              <div>
+                <input id="bridgeFeeReserve" type="number" class="fs14 text-center p-2 buffer-input" step="1">
+              </div>
+              <div id="bridgeFeeReserveSlider" class="mini-slider mt-2 me-3"></div>
             </div>
           </div>
         </div>
@@ -522,53 +513,17 @@
           {{- /* DEX BALANCES */ -}}
           <div class="d-flex align-items-center mb-3">
             <img class="logo-square mini-icon me-2">
-            <div class="d-flex flex-grow-1">
-              <div class="d-flex flex-column me-4">
+            <div id="dexManualBalanceEntrySection" class="d-flex flex-grow-1">
+              <div id="manualBalanceEntryTmpl" class="d-flex flex-column me-4">
                 <label class="small">
-                  <img data-base-logo class="micro-icon me-1">
-                  <span data-base-ticker></span>
+                  <img data-tmpl="logo" class="micro-icon me-1">
+                  <span data-tmpl="ticker"></span>
                 </label>
                 <div class="ms-2 d-flex flex-column align-items-stretch w-100">
                   <div>
-                    <input id="baseDexBalance" type="number" class="fs14 text-center p-2" step="any">
+                    <input data-tmpl="input" type="number" class="fs14 text-center p-2" step="any">
                   </div>
-                  <div id="baseDexBalanceSlider" class="mini-slider mt-2 me-3"></div>
-                </div>
-              </div>
-              <div class="d-flex flex-column me-4">
-                <label class="small">
-                  <img data-quote-logo class="micro-icon me-1">
-                  <span data-quote-ticker></span>
-                </label>
-                <div class="ms-2 d-flex flex-column align-items-stretch w-100">
-                  <div>
-                    <input id="quoteDexBalance" type="number" class="fs14 text-center p-2" step="any">
-                  </div>
-                  <div id="quoteDexBalanceSlider" class="mini-slider mt-2 me-3"></div>
-                </div>
-              </div>
-              <div id="baseDexFeeBalanceSection" class="d-flex flex-column me-4">
-                <label class="small">
-                  <img data-base-fee-logo class="micro-icon me-1">
-                  <span data-base-fee-ticker></span>
-                </label>
-                <div class="ms-2 d-flex flex-column align-items-stretch w-100">
-                  <div>
-                    <input id="baseFeeBalance" type="number" class="fs14 text-center p-2" step="any">
-                  </div>
-                  <div id="baseFeeBalanceSlider" class="mini-slider mt-2 me-3"></div>
-                </div>
-              </div>
-              <div id="quoteDexFeeBalanceSection" class="d-flex flex-column">
-                <label class="small">
-                  <img data-quote-fee-logo class="micro-icon me-1">
-                  <span data-quote-fee-ticker></span>
-                </label>
-                <div class="ms-2 d-flex flex-column align-items-stretch w-100">
-                  <div>
-                    <input id="quoteFeeBalance" type="number" class="fs14 text-center p-2" step="any">
-                  </div>
-                  <div id="quoteFeeBalanceSlider" class="mini-slider mt-2 me-3"></div>
+                  <div data-tmpl="slider" class="mini-slider mt-2 me-3"></div>
                 </div>
               </div>
             </div>
@@ -577,31 +532,7 @@
           {{- /* CEX BALANCES */ -}}
           <div id="adjustManuallyCexBalances" class="d-flex align-items-center">
             <img data-cex-logo class="mini-icon me-2">
-            <div class="d-flex flex-grow-1">
-              <div class="d-flex flex-column me-4">
-                <label class="small">
-                  <img data-base-logo class="micro-icon me-1">
-                  <span data-base-ticker></span>
-                </label>
-                <div class="ms-2 d-flex flex-column align-items-stretch w-100">
-                  <div>
-                    <input id="baseCexBalance" type="number" class="fs14 text-center p-2" step="any">
-                  </div>
-                  <div id="baseCexBalanceSlider" class="mini-slider mt-2 me-3"></div>
-                </div>
-              </div>
-              <div class="d-flex flex-column me-4">
-                <label class="small">
-                  <img data-quote-logo class="micro-icon me-1">
-                  <span data-quote-ticker></span>
-                </label>
-                <div class="ms-2 d-flex flex-column align-items-stretch w-100">
-                  <div>
-                    <input id="quoteCexBalance" type="number" class="fs14 text-center p-2" step="any">
-                  </div>
-                  <div id="quoteCexBalanceSlider" class="mini-slider mt-2 me-3"></div>
-                </div>
-              </div>
+            <div id="cexManualBalanceEntrySection" class="d-flex flex-grow-1">
             </div>
           </div>
         </div>
@@ -694,7 +625,7 @@
               <input type="radio" id="multiHopMarketOrder" name="multiHopOrderType" class="form-check-input me-2 mt-0">
               <label for="multiHopMarketOrder" class="fs15 mb-0">[[[Market Order]]]</label>
             </div>
-            <div id="limitOrderBufferSection" class="d-flex align-items-center mt-2" style="display: none;">
+            <div id="limitOrderBufferSection" class="d-flex align-items-center mt-2">
               <span class="fs15 me-2">[[[limit_order_buffer]]]</span>
               <div id="limitOrderBufferSlider" class="mini-slider flex-grow-1 me-2"></div>
               <input type="number" id="limitOrderBufferInput" class="micro thin text-end">
@@ -746,7 +677,7 @@
             </div>
             <div class="ms-2 d-flex flex-column align-items-stretch w-100">
               <div>
-                <input id="baseMinTransfer" type="number" class="fs14 text-center p-2" style="width: 30%" step="any">
+                <input id="baseMinTransfer" type="number" class="fs14 text-center p-2 transfer-input" step="any">
               </div>
               <div id="baseMinTransferSlider" class="mini-slider mt-2 me-3"></div>
             </div>
@@ -760,11 +691,52 @@
             </div>
             <div class="ms-2 d-flex flex-column align-items-stretch w-100">
               <div>
-                <input id="quoteMinTransfer" type="number" class="fs14 text-center p-2" style="width: 30%" step="any">
+                <input id="quoteMinTransfer" type="number" class="fs14 text-center p-2 transfer-input" step="any">
               </div>
               <div id="quoteMinTransferSlider" class="mini-slider mt-2 me-3"></div>
             </div>
           </div>
+
+          <div id="baseBridgeSection" class="d-flex flex-column align-items-start pt-2 mt-2 border-top">
+            <div class="fs17 pb-1">
+              <img data-base-logo class="mini-icon">
+              <span data-base-ticker></span> Bridge Configuration
+              <span class="ico-info fs13 ms-1" data-tooltip="Select the asset to bridge to and the bridge to use before depositing to the CEX"></span>
+            </div>
+            <div class="ms-2 d-flex flex-column align-items-stretch w-100">
+              <div class="d-flex align-items-center mb-2">
+                <label for="baseBridgeAsset" class="form-label me-2 fs16 bridge-label">Bridge to Asset:</label>
+                <select id="baseBridgeAsset" class="form-select flex-grow-1 bridge-select">
+                </select>
+              </div>
+              <div class="d-flex align-items-center">
+                <label for="baseBridge" class="form-label me-2 fs16 bridge-label">Bridge:</label>
+                <select id="baseBridge" class="form-select flex-grow-1 bridge-select">
+                </select>
+              </div>
+            </div>
+          </div>
+
+          <div id="quoteBridgeSection" class="d-flex flex-column align-items-start pt-2 mt-2 border-top">
+            <div class="fs17 pb-1">
+              <img data-quote-logo class="mini-icon">
+              <span data-quote-ticker></span> Bridge Configuration
+              <span class="ico-info fs13 ms-1" data-tooltip="Select the asset to bridge to and the bridge to use before depositing to the CEX"></span>
+            </div>
+            <div class="ms-2 d-flex flex-column align-items-stretch w-100">
+              <div class="d-flex align-items-center mb-2">
+                <label for="quoteBridgeAsset" class="form-label me-2 fs16 bridge-label">Bridge to Asset:</label>
+                <select id="quoteBridgeAsset" class="form-select flex-grow-1 bridge-select">
+                </select>
+              </div>
+              <div class="d-flex align-items-center">
+                <label for="quoteBridge" class="form-label me-2 fs16 bridge-label">Bridge:</label>
+                <select id="quoteBridge" class="form-select flex-grow-1 bridge-select">
+                </select>
+              </div>
+            </div>
+          </div>
+
         </div>
       </section>
     </div>
