--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -82,8 +82,8 @@
                 <table class="compact row-border no-bottom-border">
                   <thead class="unbold fs15">
                     <tr>
-                      <th class="tokenonly">Network</th>
-                      <th class="tokenonly">Allocation</th>
+                      <th class="multinetonly">Network</th>
+                      <th class="multinetonly">Allocation</th>
                       <th>Available</th>
                       <th>Locked</th>
                       <th>Pending</th> <!-- immature -->
@@ -92,13 +92,13 @@
                   </thead>
                   <tbody id="balanceBreakdown">
                     <tr id="blockchainBalanceTmpl">
-                      <td class="tokenonly">
+                      <td class="multinetonly">
                         <div class="d-inline-flex align-items-center">
                           <img data-tmpl="chainLogo" class="micro-icon greyscale">
                           <span data-tmpl="chainName" class="ms-1"></span>
                         </div>
                       </td>
-                      <td data-tmpl="allocation" class="tokenonly">—</td>
+                      <td data-tmpl="allocation" class="multinetonly">—</td>
                       <td data-tmpl="avail">—</td>
                       <td data-tmpl="locked">—</td>
                       <td data-tmpl="immature">—</td>
