--- a/client/webserver/site/src/css/wallets.scss
+++ b/client/webserver/site/src/css/wallets.scss
@@ -1,4 +1,4 @@
-.walletspage {
+[data-handler=wallets] {
   .ico-unlocked {
     color: var(--indicator-good);
   }
@@ -25,6 +25,18 @@
 
   #content {
     flex-direction: column;
+
+    &:not(.multinet) .multinetonly {
+      display: none !important;
+    }
+
+    &.multinet .uninetonly {
+      display: none !important;
+    }
+
+    &:not(.token) .tokenonly {
+      display: none !important;
+    }
   }
 
   #assetSelect {
@@ -77,7 +89,7 @@
       line-height: 1;
     }
 
-    tr.itemized > td {
+    tr.itemized>td {
       padding-bottom: 0.25rem;
     }
 
@@ -92,15 +104,15 @@
     tr.sub {
       font-size: 0.9rem;
 
-      &.last > td:first-child::before {
+      &.last>td:first-child::before {
         content: '└─ ',
       }
 
-      & > td:first-child::before {
+      &>td:first-child::before {
         content: '├─ ',
       }
 
-      & > td:last-child {
+      &>td:last-child {
         @include border-right;
 
         padding-right: 0.5rem;
@@ -110,21 +122,9 @@
 
   #walletInfo {
     border-left: none;
-
-    table#walletInfoTable {
-      td {
-        padding: 2px 5px 2px 0;
-        line-height: 1;
-
-        &:last-child {
-          text-align: right;
-          padding-left: 1rem;
-        }
-      }
-    }
   }
 
-  #earlierTxs, #txViewBlockExplorer {
+  #txViewBlockExplorer {
     text-decoration: underline;
     cursor: pointer;
   }
@@ -134,6 +134,7 @@
   }
 
   #walletDetailsBox {
+
     // Asset name and balance sizes for mobile. Redefined for > sm below.
     #assetLogo {
       width: 30px;
@@ -185,7 +186,14 @@
   }
 
   .negative-tx {
-    color: $danger;
+    color: inherit;
+  }
+
+  #docs {
+    .plainlink:visited,
+    .plainlink:hover {
+      text-decoration: none;
+    }
   }
 }
 
@@ -209,7 +217,7 @@
     @include stylish-overflow;
   }
 
-  .walletspage {
+  [data-handler=wallets] {
     #walletDetailsBox {
       border-bottom: none !important;
     }
@@ -225,7 +233,7 @@
 }
 
 @include media-breakpoint-up(sm) {
-  .walletspage {
+  [data-handler=wallets] {
     #walletDetailsBox {
       #assetLogo {
         width: 40px;
@@ -278,7 +286,7 @@
 }
 
 @include media-breakpoint-up(md) {
-  .walletspage {
+  [data-handler=wallets] {
     #sendReceive {
       border-bottom: none;
     }
@@ -298,5 +306,3 @@
 #submitReconfig[disabled] {
   cursor: not-allowed;
 }
-
-
